test/files/pos/t9285.scala
// scalac: -Xfatal-warnings
case class C(placeholder: Unit)
