test/files/neg/optimiseDeprecated.scala
// scalac: -optimise -deprecation -Xfatal-warnings
class C
